--- a/app/src/main/res/layout/dialog_brapi_export.xml
+++ b/app/src/main/res/layout/dialog_brapi_export.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -16,19 +16,19 @@
         app:popupTheme="@style/AppToolbar" />
 
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
         android:layout_above="@+id/bottomBar"
+        android:layout_below="@+id/toolbar"
         android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_below="@+id/toolbar">
+            android:layout_below="@+id/toolbar"
+            android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -63,6 +63,7 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -234,6 +235,7 @@
                     android:textSize="@dimen/text_size_medium"
                     android:textStyle="bold" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -439,22 +441,23 @@
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="15dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
+
         <Button
             android:id="@+id/brapi_export_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:layout_marginHorizontal="20dp"
+            android:layout_weight="1"
             android:onClick="onClick"
             android:text="@string/brapi_export_button"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
-            android:textStyle="bold"
-            android:layout_marginHorizontal="20dp"
-            android:layout_weight="1"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -462,21 +465,22 @@
         android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:layout_centerInParent="true"
-        android:orientation="vertical"
-        android:visibility="gone"
         android:layout_centerHorizontal="true"
-        android:background="@color/whiteBackground">
+        android:background="@color/whiteBackground"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="bottom|center"
             android:text="@string/brapi_saving_indicator"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <ProgressBar
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:indeterminate="true"/>
+            android:indeterminate="true" />
 
     </LinearLayout>
 
