--- a/app/src/main/res/layout/listitem_trait.xml
+++ b/app/src/main/res/layout/listitem_trait.xml
@@ -7,8 +7,8 @@
     android:focusableInTouchMode="false"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingBottom="4dp"
-    android:paddingTop="4dp">
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp">
 
     <ImageView
         android:id="@+id/dragSort"
