--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,170 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item type="id" name="tvVersion" />
-    <item type="id" name="developerMsg" />
-    <item type="id" name="developerTrevor" />
-    <item type="id" name="developerTrevorEmail" />
-    <item type="id" name="developerTrevorSite" />
-    <item type="id" name="developerJesse" />
-    <item type="id" name="developerJesseEmail" />
-    <item type="id" name="developerJesseSite" />
-    <item type="id" name="developerTp" />
-    <item type="id" name="developerTpMsg" />
-    <item type="id" name="developerTpEmail" />
-    <item type="id" name="translatorMsg" />
-    <item type="id" name="translatorList" />
-    <item type="id" name="closeBtn" />
-    <item type="id" name="tips" />
-    <item type="id" name="cycle" />
-    <item type="id" name="enableMap" />
-    <item type="id" name="ignoreExisting" />
-    <item type="id" name="useDay" />
-    <item type="id" name="rangeSound" />
-    <item type="id" name="jumpToPlot" />
-    <item type="id" name="nextEmptyPlot" />
-    <item type="id" name="data" />
-    <item type="id" name="myList" />
-    <item type="id" name="text" />
-    <item type="id" name="main" />
-    <item type="id" name="okBtn" />
-    <item type="id" name="row" />
-    <item type="id" name="column" />
-    <item type="id" name="map" />
-    <item type="id" name="spinnerTarget" />
-    <item type="id" name="currentLocation" />
-    <item type="id" name="latitude" />
-    <item type="id" name="longitude" />
-    <item type="id" name="getLctnBtn" />
-    <item type="id" name="saveBtn" />
-    <item type="id" name="dpi" />
-    <item type="id" name="drop1prefix" />
-    <item type="id" name="drop2prefix" />
-    <item type="id" name="drop3prefix" />
-    <item type="id" name="drop1" />
-    <item type="id" name="drop2" />
-    <item type="id" name="drop3" />
-    <item type="id" name="traitLeft" />
-    <item type="id" name="traitType" />
-    <item type="id" name="traitRight" />
-    <item type="id" name="traitDetails" />
-    <item type="id" name="rangeLeft" />
-    <item type="id" name="rangeName" />
-    <item type="id" name="range" />
-    <item type="id" name="plotName" />
-    <item type="id" name="plot" />
-    <item type="id" name="rangeRight" />
-    <item type="id" name="tNum" />
-    <item type="id" name="eNum" />
-    <item type="id" name="pNum" />
-    <item type="id" name="seekbar" />
-    <item type="id" name="clearBtn4" />
-    <item type="id" name="qPick" />
-    <item type="id" name="q1" />
-    <item type="id" name="q2" />
-    <item type="id" name="q3" />
-    <item type="id" name="q4" />
-    <item type="id" name="q5" />
-    <item type="id" name="q6" />
-    <item type="id" name="q7" />
-    <item type="id" name="q8" />
-    <item type="id" name="q9" />
-    <item type="id" name="q10" />
-    <item type="id" name="q11" />
-    <item type="id" name="q12" />
-    <item type="id" name="clearBtn2" />
-    <item type="id" name="datePick" />
-    <item type="id" name="mth" />
-    <item type="id" name="day" />
-    <item type="id" name="minusDateBtn" />
-    <item type="id" name="enterBtn" />
-    <item type="id" name="addDateBtn" />
-    <item type="id" name="clearDateBtn" />
-    <item type="id" name="clearBtn" />
-    <item type="id" name="eImg" />
-    <item type="id" name="clearBtn5" />
-    <item type="id" name="kb" />
-    <item type="id" name="k1" />
-    <item type="id" name="k2" />
-    <item type="id" name="k3" />
-    <item type="id" name="k4" />
-    <item type="id" name="k5" />
-    <item type="id" name="k6" />
-    <item type="id" name="k7" />
-    <item type="id" name="k8" />
-    <item type="id" name="k9" />
-    <item type="id" name="k10" />
-    <item type="id" name="k11" />
-    <item type="id" name="k12" />
-    <item type="id" name="k13" />
-    <item type="id" name="k14" />
-    <item type="id" name="k15" />
-    <item type="id" name="k16" />
-    <item type="id" name="audio" />
-    <item type="id" name="record" />
-    <item type="id" name="clearRecord" />
-    <item type="id" name="segmenth" />
-    <item type="id" name="segment" />
-    <item type="id" name="mapClose" />
-    <item type="id" name="mapParameter" />
-    <item type="id" name="mapAnalyze" />
-    <item type="id" name="mapExport" />
-    <item type="id" name="mapTrait" />
-    <item type="id" name="upBtn" />
-    <item type="id" name="leftBtn" />
-    <item type="id" name="center" />
-    <item type="id" name="rightBtn" />
-    <item type="id" name="r1" />
-    <item type="id" name="r2" />
-    <item type="id" name="r3" />
-    <item type="id" name="value" />
-    <item type="id" name="mapSummary" />
-    <item type="id" name="downBtn" />
-    <item type="id" name="direction" />
-    <item type="id" name="orientation" />
-    <item type="id" name="currentPerson" />
-    <item type="id" name="firstName" />
-    <item type="id" name="lastName" />
-    <item type="id" name="fileName" />
-    <item type="id" name="formatDB" />
-    <item type="id" name="formatExcel" />
-    <item type="id" name="rowParent" />
-    <item type="id" name="startBtn" />
-    <item type="id" name="addBtn" />
-    <item type="id" name="columns" />
-    <item type="id" name="like" />
-    <item type="id" name="searchText" />
-    <item type="id" name="text1" />
-    <item type="id" name="formatbox" />
-    <item type="id" name="format" />
-    <item type="id" name="traitbox" />
-    <item type="id" name="trait" />
-    <item type="id" name="defbox" />
-    <item type="id" name="def" />
-    <item type="id" name="boolBtn" />
-    <item type="id" name="minbox" />
-    <item type="id" name="minimum" />
-    <item type="id" name="maxbox" />
-    <item type="id" name="maximum" />
-    <item type="id" name="detailsbox" />
-    <item type="id" name="details" />
-    <item type="id" name="categorybox" />
-    <item type="id" name="categories" />
-    <item type="id" name="visible" />
-    <item type="id" name="copyBtn" />
-    <item type="id" name="delBtn" />
-    <item type="id" name="text2" />
-    <item type="id" name="header" />
-    <item type="id" name="prev" />
-    <item type="id" name="close" />
-    <item type="id" name="next" />
-    <item type="id" name="help" />
-    <item type="id" name="database" />
-    <item type="id" name="about" />
-    <item type="id" name="search" />
-    <item type="id" name="resources" />
-    <item type="id" name="settings" />
-    <item type="id" name="addTrait" />
-    <item type="id" name="deleteTrait" />
-    <item type="id" name="importdb" />
-    <item type="id" name="exportdb" />
+    <item name="tvVersion" type="id" />
+    <item name="developerMsg" type="id" />
+    <item name="developerTrevor" type="id" />
+    <item name="developerTrevorEmail" type="id" />
+    <item name="developerTrevorSite" type="id" />
+    <item name="developerJesse" type="id" />
+    <item name="developerJesseEmail" type="id" />
+    <item name="developerJesseSite" type="id" />
+    <item name="developerTp" type="id" />
+    <item name="developerTpMsg" type="id" />
+    <item name="developerTpEmail" type="id" />
+    <item name="translatorMsg" type="id" />
+    <item name="translatorList" type="id" />
+    <item name="closeBtn" type="id" />
+    <item name="tips" type="id" />
+    <item name="cycle" type="id" />
+    <item name="enableMap" type="id" />
+    <item name="ignoreExisting" type="id" />
+    <item name="useDay" type="id" />
+    <item name="rangeSound" type="id" />
+    <item name="jumpToPlot" type="id" />
+    <item name="nextEmptyPlot" type="id" />
+    <item name="data" type="id" />
+    <item name="myList" type="id" />
+    <item name="text" type="id" />
+    <item name="main" type="id" />
+    <item name="okBtn" type="id" />
+    <item name="row" type="id" />
+    <item name="column" type="id" />
+    <item name="map" type="id" />
+    <item name="spinnerTarget" type="id" />
+    <item name="currentLocation" type="id" />
+    <item name="latitude" type="id" />
+    <item name="longitude" type="id" />
+    <item name="getLctnBtn" type="id" />
+    <item name="saveBtn" type="id" />
+    <item name="dpi" type="id" />
+    <item name="drop1prefix" type="id" />
+    <item name="drop2prefix" type="id" />
+    <item name="drop3prefix" type="id" />
+    <item name="drop1" type="id" />
+    <item name="drop2" type="id" />
+    <item name="drop3" type="id" />
+    <item name="traitLeft" type="id" />
+    <item name="traitType" type="id" />
+    <item name="traitRight" type="id" />
+    <item name="traitDetails" type="id" />
+    <item name="rangeLeft" type="id" />
+    <item name="rangeName" type="id" />
+    <item name="range" type="id" />
+    <item name="plotName" type="id" />
+    <item name="plot" type="id" />
+    <item name="rangeRight" type="id" />
+    <item name="tNum" type="id" />
+    <item name="eNum" type="id" />
+    <item name="pNum" type="id" />
+    <item name="seekbar" type="id" />
+    <item name="clearBtn4" type="id" />
+    <item name="qPick" type="id" />
+    <item name="q1" type="id" />
+    <item name="q2" type="id" />
+    <item name="q3" type="id" />
+    <item name="q4" type="id" />
+    <item name="q5" type="id" />
+    <item name="q6" type="id" />
+    <item name="q7" type="id" />
+    <item name="q8" type="id" />
+    <item name="q9" type="id" />
+    <item name="q10" type="id" />
+    <item name="q11" type="id" />
+    <item name="q12" type="id" />
+    <item name="clearBtn2" type="id" />
+    <item name="datePick" type="id" />
+    <item name="mth" type="id" />
+    <item name="day" type="id" />
+    <item name="minusDateBtn" type="id" />
+    <item name="enterBtn" type="id" />
+    <item name="addDateBtn" type="id" />
+    <item name="clearDateBtn" type="id" />
+    <item name="clearBtn" type="id" />
+    <item name="eImg" type="id" />
+    <item name="clearBtn5" type="id" />
+    <item name="kb" type="id" />
+    <item name="k1" type="id" />
+    <item name="k2" type="id" />
+    <item name="k3" type="id" />
+    <item name="k4" type="id" />
+    <item name="k5" type="id" />
+    <item name="k6" type="id" />
+    <item name="k7" type="id" />
+    <item name="k8" type="id" />
+    <item name="k9" type="id" />
+    <item name="k10" type="id" />
+    <item name="k11" type="id" />
+    <item name="k12" type="id" />
+    <item name="k13" type="id" />
+    <item name="k14" type="id" />
+    <item name="k15" type="id" />
+    <item name="k16" type="id" />
+    <item name="audio" type="id" />
+    <item name="record" type="id" />
+    <item name="clearRecord" type="id" />
+    <item name="segmenth" type="id" />
+    <item name="segment" type="id" />
+    <item name="mapClose" type="id" />
+    <item name="mapParameter" type="id" />
+    <item name="mapAnalyze" type="id" />
+    <item name="mapExport" type="id" />
+    <item name="mapTrait" type="id" />
+    <item name="upBtn" type="id" />
+    <item name="leftBtn" type="id" />
+    <item name="center" type="id" />
+    <item name="rightBtn" type="id" />
+    <item name="r1" type="id" />
+    <item name="r2" type="id" />
+    <item name="r3" type="id" />
+    <item name="value" type="id" />
+    <item name="mapSummary" type="id" />
+    <item name="downBtn" type="id" />
+    <item name="direction" type="id" />
+    <item name="orientation" type="id" />
+    <item name="currentPerson" type="id" />
+    <item name="firstName" type="id" />
+    <item name="lastName" type="id" />
+    <item name="fileName" type="id" />
+    <item name="formatDB" type="id" />
+    <item name="formatExcel" type="id" />
+    <item name="rowParent" type="id" />
+    <item name="startBtn" type="id" />
+    <item name="addBtn" type="id" />
+    <item name="columns" type="id" />
+    <item name="like" type="id" />
+    <item name="searchText" type="id" />
+    <item name="text1" type="id" />
+    <item name="formatbox" type="id" />
+    <item name="format" type="id" />
+    <item name="traitbox" type="id" />
+    <item name="trait" type="id" />
+    <item name="defbox" type="id" />
+    <item name="def" type="id" />
+    <item name="boolBtn" type="id" />
+    <item name="minbox" type="id" />
+    <item name="minimum" type="id" />
+    <item name="maxbox" type="id" />
+    <item name="maximum" type="id" />
+    <item name="detailsbox" type="id" />
+    <item name="details" type="id" />
+    <item name="categorybox" type="id" />
+    <item name="categories" type="id" />
+    <item name="visible" type="id" />
+    <item name="copyBtn" type="id" />
+    <item name="delBtn" type="id" />
+    <item name="text2" type="id" />
+    <item name="header" type="id" />
+    <item name="prev" type="id" />
+    <item name="close" type="id" />
+    <item name="next" type="id" />
+    <item name="help" type="id" />
+    <item name="database" type="id" />
+    <item name="about" type="id" />
+    <item name="search" type="id" />
+    <item name="resources" type="id" />
+    <item name="settings" type="id" />
+    <item name="addTrait" type="id" />
+    <item name="deleteTrait" type="id" />
+    <item name="importdb" type="id" />
+    <item name="exportdb" type="id" />
 </resources>
