--- a/app/src/main/res/layout-sw600dp/trait_boolean.xml
+++ b/app/src/main/res/layout-sw600dp/trait_boolean.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.fieldbook.tracker.traitLayouts.BooleanTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/booleanLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="gone"
-    android:id="@+id/booleanLayout"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="gone">
 
     <ImageView
         android:id="@+id/eImg"
         android:layout_width="160dp"
         android:layout_height="160dp"
+        android:layout_gravity="center_horizontal"
         android:padding="10dp"
         android:scaleType="fitXY"
-        android:layout_gravity="center_horizontal"
         android:src="@drawable/trait_boolean_true" />
 </com.fieldbook.tracker.traitLayouts.BooleanTraitLayout>
