--- a/app/src/main/res/layout-sw600dp/trait_text.xml
+++ b/app/src/main/res/layout-sw600dp/trait_text.xml
@@ -3,7 +3,7 @@
     android:id="@+id/textLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="gone"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="gone">
 
 </com.fieldbook.tracker.traitLayouts.TextTraitLayout>
