--- a/app/src/main/res/layout/activity_fields.xml
+++ b/app/src/main/res/layout/activity_fields.xml
@@ -6,8 +6,7 @@
     android:background="#FFFFFF"
     android:orientation="vertical">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/main_content"
         android:layout_width="match_parent"
