--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     android:orientation="vertical"
-    android:theme="@style/AppTheme"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:theme="@style/AppTheme">
 
     <ScrollView
         android:layout_width="fill_parent"
@@ -23,8 +23,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center_horizontal"
+        android:orientation="horizontal"
         android:paddingTop="10dp">
 
         <Button
