--- a/app/src/main/res/layout/activity_traits_brapi.xml
+++ b/app/src/main/res/layout/activity_traits_brapi.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -26,8 +25,8 @@
             android:id="@+id/loadTraits"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:onClick="buttonClicked"
             android:text="@string/brapi_load_traits_button"
@@ -38,7 +37,7 @@
             android:id="@+id/brapiBaseUrl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
 
     </LinearLayout>
 
@@ -69,47 +68,50 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="bottom|center">
+        android:gravity="bottom|center"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/prev"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
+                android:onClick="buttonClicked"
                 android:text="@string/prev"
                 android:textColor="@color/s_text"
-                android:textSize="20sp"
-                android:layout_alignParentLeft="true"
-                android:onClick="buttonClicked"/>
+                android:textSize="20sp" />
+
             <TextView
                 android:id="@+id/page_indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text = "@string/page_one_of_one"
-                android:layout_centerInParent="true"/>
+                android:layout_centerInParent="true"
+                android:text="@string/page_one_of_one"
+                android:textSize="15sp" />
+
             <Button
                 android:id="@+id/next"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
+                android:onClick="buttonClicked"
                 android:text="@string/next"
                 android:textColor="@color/s_text"
-                android:textSize="20sp"
-                android:onClick="buttonClicked"
-                android:layout_alignParentRight="true"/>
+                android:textSize="20sp" />
         </RelativeLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -123,10 +125,10 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
+                android:onClick="buttonClicked"
                 android:text="@string/brapi_save_trait"
                 android:textColor="@color/s_text"
-                android:textSize="20sp"
-                android:onClick="buttonClicked"/>
+                android:textSize="20sp" />
         </LinearLayout>
 
     </LinearLayout>
