--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -13,8 +13,8 @@
         android:layout_marginLeft="6dip"
         android:gravity="center"
         android:minWidth="130dp"
-        android:textSize="@dimen/text_size_medium"
         android:textColor="#000000"
+        android:textSize="@dimen/text_size_medium"
         android:textStyle="bold" />
 
     <TextView
@@ -25,15 +25,15 @@
         android:layout_marginLeft="6dip"
         android:minWidth="130dp"
         android:text=""
-        android:textSize="@dimen/text_size_medium"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="@dimen/text_size_medium" />
 
     <Button
         android:id="@+id/prev"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_below="@+id/field_count"
+        android:layout_alignParentLeft="true"
         android:text="@string/tutorial_previous"
         android:textColor="#000000"
         android:textSize="@dimen/text_size_small"
@@ -54,8 +54,8 @@
         android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_below="@+id/field_count"
+        android:layout_alignParentRight="true"
         android:text="@string/tutorial_next"
         android:textColor="#000000"
         android:textSize="@dimen/text_size_small"
