--- a/app/src/main/res/layout/dialog_export.xml
+++ b/app/src/main/res/layout/dialog_export.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    android:paddingBottom="5dp"
     android:paddingLeft="20dp"
+    android:paddingTop="5dp"
     android:paddingRight="20dp"
-    android:paddingTop="5dp">
+    android:paddingBottom="5dp">
 
     <ScrollView
         android:layout_width="fill_parent"
