--- a/app/src/main/res/layout/dialog_info.xml
+++ b/app/src/main/res/layout/dialog_info.xml
@@ -5,36 +5,37 @@
     android:background="#FFFFFF"
     android:orientation="vertical"
     android:paddingLeft="20dp"
-    android:paddingRight="20dp"
     android:paddingTop="5dp"
+    android:paddingRight="20dp"
     android:paddingBottom="5dp">
 
     <TextView
+        android:id="@+id/body_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/body_title"
+        android:gravity="center"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="10dp"
         android:text="@string/brapi_info_title"
         android:textColor="#000000"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp"
         android:textSize="@dimen/text_size_large"
-        android:textStyle="bold"
-        android:gravity="center"></TextView>
+        android:textStyle="bold"></TextView>
+
     <TextView
+        android:id="@+id/body_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/body_message"
+        android:gravity="center"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="10dp"
         android:text="Example"
         android:textColor="#000000"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp"
-        android:textSize="@dimen/text_size_medium"
-        android:gravity="center"></TextView>
+        android:textSize="@dimen/text_size_medium"></TextView>
 
     <Button
+        android:id="@+id/closeBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/closeBtn"
         android:text="@string/dialog_ok"></Button>
 
 </LinearLayout>
