--- a/app/src/main/res/layout/dialog_person.xml
+++ b/app/src/main/res/layout/dialog_person.xml
@@ -4,10 +4,10 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    android:paddingBottom="5dp"
     android:paddingLeft="20dp"
+    android:paddingTop="5dp"
     android:paddingRight="20dp"
-    android:paddingTop="5dp">
+    android:paddingBottom="5dp">
 
     <EditText
         android:id="@+id/firstName"
