--- a/app/src/main/res/layout/listitem_search_constructor.xml
+++ b/app/src/main/res/layout/listitem_search_constructor.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="5dp">
+    android:paddingTop="5dp"
+    android:paddingRight="10dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -31,19 +31,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
         android:layout_marginLeft="5dp"
+        android:gravity="center_vertical"
         android:orientation="vertical">
 
         <EditText
             android:id="@+id/searchText"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            android:textColor="#000000"
+            android:layout_weight="1"
             android:inputType="text"
             android:singleLine="true"
+            android:textColor="#000000"
             android:textSize="@dimen/text_size_xlarge" />
     </LinearLayout>
 
